--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "database-interaction",
   "version": "1.0.0-alpha.1.1",
-  "description":
-    "Database interaction service to ensure consistent behavior over all services.",
+  "description": "Database interaction service to ensure consistent behavior over all services.",
   "main": "app.ts",
   "scripts": {
     "start": "npm run gulp-tsc",
     "db-setup": "npm run build && node ./dist/db-setup/db-setup.script.js",
     "build": "node_modules/.bin/gulp tsc",
     "gulp-tsc": "node_modules/.bin/gulp start",
-    "pack":
-      "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
+    "pack": "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "deploy": "eb deploy LearningObject-Service-Production --profile clark"
   },
   "repository": {
@@ -24,8 +22,8 @@
   },
   "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
-    "@cyber4all/clark-entity": "^1.1.6",
-    "@cyber4all/clark-schema": "^1.0.7",
+    "@cyber4all/clark-entity": "^2.0.0-beta.0.3",
+    "@cyber4all/clark-schema": "^2.0.0-beta.0.2",
     "@cyber4all/clark-taxonomy": "1.0.16",
     "@types/express-jwt": "0.0.38",
     "@types/morgan": "^1.7.35",
