--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "scripts": {
     "start": "npm run gulp-tsc",
-    "db-setup": "npm run build && node ./dist/db-setup/db-setup.script.js",
     "build": "node_modules/.bin/gulp tsc",
+    "test": "npm run build && node ./dist/tests/test.js",
     "gulp-tsc": "node_modules/.bin/gulp start",
     "pack": "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "deploy": "eb deploy LearningObject-Service-Production --profile clark"
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/Cyber4All/database-interaction#readme",
   "dependencies": {
-    "@cyber4all/clark-entity": "^2.0.0-beta.0.3",
+    "@cyber4all/clark-entity": "^2.1.0-beta.0.0",
     "@cyber4all/clark-schema": "^2.0.0-beta.0.2",
     "@cyber4all/clark-taxonomy": "1.0.16",
     "@types/express-jwt": "0.0.38",
@@ -45,15 +45,11 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
-    "@types/jsonfile": "^4.0.0",
-    "@types/line-reader": "0.0.28",
     "@types/mongodb": "^2.2.13",
     "@types/oboe": "^2.0.28",
     "@types/request-promise": "^4.1.39",
     "@types/tape": "^4.2.31",
     "cors": "^2.8.4",
-    "line-reader": "^0.4.0",
-    "oboe": "^2.1.4",
     "request-promise": "^4.2.2",
     "tape": "^4.8.0",
     "tslint": "^5.8.0",
