--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "database-interaction",
   "version": "1.0.0-alpha.1.1",
-  "description":
-    "Database interaction service to ensure consistent behavior over all services.",
+  "description": "Database interaction service to ensure consistent behavior over all services.",
   "main": "app.ts",
   "scripts": {
     "start": "npm run gulp-tsc",
     "build": "node_modules/.bin/gulp tsc",
     "test": "npm run build && node ./dist/tests/test.js",
     "gulp-tsc": "node_modules/.bin/gulp start",
-    "pack":
-      "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
+    "pack": "npm run build && cp ./package.json ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "deploy": "eb deploy LearningObject-Service-Production --profile clark"
   },
   "repository": {
@@ -30,8 +28,10 @@
     "@types/express-jwt": "0.0.38",
     "@types/morgan": "^1.7.35",
     "assert-never": "^1.0.0",
+    "aws-sdk": "^2.211.0",
     "bcrypt": "^1.0.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
@@ -40,8 +40,8 @@
     "gulp-typescript": "^3.1.7",
     "mongodb": "^2.2.31",
     "morgan": "^1.9.0",
-    "source-map-support": "^0.5.0",
-    "cors": "^2.8.4"
+    "multer": "^1.3.0",
+    "source-map-support": "^0.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
