--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-interaction",
+  "name": "learning-object-service",
   "version": "1.0.0-beta.0.0",
   "description":
     "Database interaction service to ensure consistent behavior over all services.",
@@ -16,14 +16,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Cyber4All/database-interaction.git"
+    "url": "git+https://github.com/Cyber4All/learning-object-service.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Cyber4All/database-interaction/issues"
+    "url": "https://github.com/Cyber4All/learning-object-service/issues"
   },
-  "homepage": "https://github.com/Cyber4All/database-interaction#readme",
+  "homepage": "https://github.com/Cyber4All/learning-object-service#readme",
   "dependencies": {
     "@cyber4all/clark-entity": "^2.1.0-beta.0.1",
     "@cyber4all/clark-schema": "^2.0.0-beta.0.2",
