--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-interaction",
+  "name": "learning-object-service",
   "version": "1.0.0-alpha.1.1",
   "description":
     "Database interaction service to ensure consistent behavior over all services.",
