--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "learning-object-service",
-  "version": "1.0.0-alpha.1.1",
-  "description":
-    "Database interaction service to ensure consistent behavior over all services.",
+  "version": "1.0.0-beta.0.0",
+  "description": "Database interaction service to ensure consistent behavior over all services.",
   "main": "app.ts",
   "scripts": {
     "start": "npm run gulp-tsc",
     "build": "node_modules/.bin/gulp tsc",
     "test": "npm run build && node ./dist/tests/test.js",
     "gulp-tsc": "node_modules/.bin/gulp start",
-    "pack":
-      "npm run build && cp ./package.json ./dist && cp ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
+    "pack": "npm run build && cp ./package.json ./dist && cp ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "deploy": "eb deploy LearningObject-Service-Production --profile clark"
   },
   "repository": {
