--- a/package.json
+++ b/package.json
@@ -25,19 +25,12 @@
     "@cyber4all/clark-entity": "^2.1.0-beta.0.3",
     "@cyber4all/clark-schema": "^2.0.0-beta.0.3",
     "@cyber4all/clark-taxonomy": "^2.0.0",
-    "@types/express-jwt": "0.0.38",
-    "@types/morgan": "^1.7.35",
-    "assert-never": "^1.0.0",
     "aws-sdk": "^2.211.0",
-    "bcrypt": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-typescript": "^3.1.7",
     "mongodb": "^2.2.31",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -49,12 +42,18 @@
     "@types/cors": "^2.8.3",
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
+    "@types/express-jwt": "0.0.38",
     "@types/jsonwebtoken": "^7.2.5",
     "@types/mongodb": "^2.2.13",
+    "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.6",
     "@types/oboe": "^2.0.28",
     "@types/request-promise": "^4.1.39",
     "@types/tape": "^4.2.31",
     "cors": "^2.8.4",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-typescript": "^3.1.7",
     "request-promise": "^4.2.2",
     "tape": "^4.8.0",
     "tslint": "^5.8.0",
