--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "downlevelIteration": true,
-    "allowUnusedLabels": false
+    "allowUnusedLabels": false,
+    "types": [ "jest" ]
   }
+  
 }
