--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@cyber4all/clark-entity": "^2.1.0-beta.0.3",
     "@cyber4all/clark-schema": "^2.0.0-beta.1.0",
     "@cyber4all/clark-taxonomy": "^2.0.0",
+    "@cyber4all/clark-tooltip": "^0.4.1",
     "aws-sdk": "^2.211.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
@@ -35,6 +36,7 @@
     "mongodb": "^2.2.31",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "request": "^2.85.0",
     "rxjs": "^5.5.8",
     "source-map-support": "^0.5.0"
   },
