--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-object-service"
+  "name": "learning-object-service",
   "version": "1.0.0-beta.2.3",
   "description": "Learning Object Microservice.",
   "main": "app.ts",
