--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@cyber4all/clark-taxonomy": "^2.0.0",
     "@cyber4all/clark-tooltip": "^0.4.1",
     "aws-sdk": "^2.211.0",
+    "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
