--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "mongodb": "^3.1.1",
+    "mongodb": "2.2.31",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "request": "^2.85.0",
