--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@cyber4all/clark-schema": "^2.0.0-beta.1.0",
     "@cyber4all/clark-taxonomy": "^2.0.0",
     "@cyber4all/clark-tooltip": "^0.4.1",
+    "amqplib": "^0.5.2",
     "aws-sdk": "^2.211.0",
     "axios": "^0.18.0",
     "cookie-parser": "^1.4.3",
@@ -45,6 +46,7 @@
     "stopword": "^0.1.10"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.5.8",
     "@types/bcrypt": "^1.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.3",
