Update to custom image with docker & git

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   working_directory: ~/learning-object-service
   docker:
-    - image: cyber4all/circleci-aws:1.0.0
+    - image: cyber4all/circleci-aws:docker-git
 version: 2
 jobs:
   build:
