--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@cyber4all/clark-entity": "^2.0.5",
     "@cyber4all/clark-schema": "^2.0.0-beta.1.0",
     "@cyber4all/clark-taxonomy": "^2.0.0",
+    "@cyber4all/service-messager": "^0.1.1",
     "amqplib": "^0.5.2",
     "aws-sdk": "^2.211.0",
     "chai": "^4.1.2",
