--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "gulp-watch": "^5.0.1",
     "mongodb": "^2.2.31",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
