--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@cyber4all/clark-entity": "^2.0.5",
     "@cyber4all/clark-schema": "^2.0.0-beta.1.0",
-    "@cyber4all/clark-taxonomy": "^2.0.0",
+    "@cyber4all/clark-taxonomy": "2.0.2",
     "@cyber4all/clark-tooltip": "^0.6.1",
     "@types/pdfkit": "^0.7.36",
     "@types/striptags": "^3.1.1",
