--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "http": "0.0.0",
     "mongodb": "2.2.31",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "node-fetch": "^2.2.0",
     "pdfkit": "^0.8.3",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
@@ -60,6 +62,7 @@
     "@types/mongodb": "^3.1.1",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.6",
+    "@types/node-fetch": "^2.1.2",
     "@types/oboe": "^2.0.28",
     "@types/request-promise": "^4.1.39",
     "@types/stemmer": "^1.0.1",
