--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "mongodb": "2.2.31",
+    "mongodb": "^3.1.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "pdfkit": "^0.8.3",
