--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "lokijs": "^1.5.5",
     "mongodb": "^3.1.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -59,6 +60,7 @@
     "@types/express-jwt": "0.0.40",
     "@types/jest": "^23.1.5",
     "@types/jsonwebtoken": "^7.2.5",
+    "@types/lokijs": "^1.5.2",
     "@types/mongodb": "^3.1.7",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.6",
@@ -68,6 +70,7 @@
     "@types/request-promise": "^4.1.39",
     "@types/stemmer": "^1.0.1",
     "@types/tape": "^4.2.31",
+    "@types/uuid": "^3.4.4",
     "cors": "^2.8.4",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
@@ -76,7 +79,8 @@
     "tape": "^4.8.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "uuid": "^3.3.2"
   },
   "prettier": {
     "singleQuote": true,
