--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "lokijs": "^1.5.5",
     "mongodb": "^3.1.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -53,6 +52,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
+    "@types/chai": "^4.1.5",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.3",
     "@types/dotenv": "^4.0.2",
@@ -60,7 +60,6 @@
     "@types/express-jwt": "0.0.40",
     "@types/jest": "^23.1.5",
     "@types/jsonwebtoken": "^7.2.5",
-    "@types/lokijs": "^1.5.2",
     "@types/mongodb": "^3.1.7",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.6",
