:green_heart: Provide whitelist url to test runner

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Build Image & Unit Test
           command: | 
-            docker build -t learning-object-service:$CIRCLE_SHA1 . --build-arg UNIT_TEST=0 --build-arg CLARK_DB_URI_TEST=$CLARK_DB_URI_TEST
+            docker build -t learning-object-service:$CIRCLE_SHA1 . --build-arg WHITELIST_URI=$WHITELIST_URI --build-arg CLARK_DB_URI_TEST=$CLARK_DB_URI_TEST
       - run:
           name: Login to docker
           command: docker login -u "${DOCKER_USER}" -p "${DOCKER_PASS}"
