--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "source-map-support": "^0.5.0",
     "stemmer": "^1.0.2",
     "stopword": "^0.1.10",
-    "striptags": "^3.1.1"
+    "striptags": "^3.1.1",
+    "natives": "^1.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
