--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run gulp-tsc",
     "build": "node_modules/.bin/gulp tsc",
+    "pretest": "npm run build",
     "test": "node_modules/.bin/jest --verbose  --coverage",
     "gulp-tsc": "node_modules/.bin/gulp start",
     "pack": "npm run build && cp ./package.json ./dist && cp -r ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
@@ -37,6 +38,7 @@
     "mongodb": "^3.1.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "natives": "^1.1.3",
     "node-fetch": "^2.2.0",
     "pdfkit": "^0.8.3",
     "raven": "^2.6.4",
@@ -46,8 +48,7 @@
     "source-map-support": "^0.5.0",
     "stemmer": "^1.0.2",
     "stopword": "^0.1.10",
-    "striptags": "^3.1.1",
-    "natives": "^1.1.3"
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
@@ -69,12 +70,14 @@
     "@types/request-promise": "^4.1.39",
     "@types/stemmer": "^1.0.1",
     "@types/striptags": "^3.1.1",
+    "@types/supertest": "^2.0.7",
     "@types/tape": "^4.2.31",
     "@types/uuid": "^3.4.4",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^4.0.2",
     "jest": "^23.4.0",
+    "supertest": "^3.3.0",
     "tape": "^4.8.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.8.0",
