--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/Cyber4All/learning-object-service#readme",
   "dependencies": {
-    "@cyber4all/clark-entity": "^4.0.0-rc.7.1",
+    "@cyber4all/clark-entity": "^4.0.0-rc.8.0",
     "@cyber4all/clark-schema": "^1.1.0",
     "@cyber4all/clark-taxonomy": "2.0.2",
     "aws-sdk": "^2.211.0",
@@ -37,6 +37,7 @@
     "mongodb": "^3.1.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "natives": "^1.1.3",
     "node-fetch": "^2.2.0",
     "pdfkit": "^0.8.3",
     "raven": "^2.6.4",
@@ -46,8 +47,7 @@
     "source-map-support": "^0.5.0",
     "stemmer": "^1.0.2",
     "stopword": "^0.1.10",
-    "striptags": "^3.1.1",
-    "natives": "^1.1.3"
+    "striptags": "^3.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
