:twisted_rightwards_arrows: Merge commit fb87d7c into feature/update-parent-timestamp

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run gulp-tsc",
     "build": "node_modules/.bin/gulp tsc",
-    "test": "node_modules/.bin/jest --verbose  --coverage",
+    "test": "node_modules/.bin/jest --verbose  --coverage --detectOpenHandles",
     "gulp-tsc": "node_modules/.bin/gulp start",
     "pack": "npm run build && cp ./package.json ./dist && cp -r ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "zip": "cp ./package.json ./dist && cp -r ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
@@ -74,6 +74,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^4.0.2",
     "jest": "^23.4.0",
+    "mongodb-memory-server": "^2.7.4",
     "tape": "^4.8.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.8.0",
