--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^4.0.2",
     "jest": "^23.4.0",
+    "jsonwebtoken": "^8.5.0",
     "mongodb-memory-server": "^2.7.4",
     "supertest": "^3.3.0",
     "tape": "^4.8.0",
