--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "@types/stemmer": "^1.0.1",
     "@types/striptags": "^3.1.1",
     "@types/supertest": "^2.0.7",
-    "@types/uuid": "^3.4.4",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-typescript": "^4.0.2",
@@ -74,8 +73,7 @@
     "supertest": "^3.3.0",
     "ts-jest": "^23.0.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3",
-    "uuid": "^3.3.2"
+    "typescript": "^2.5.3"
   },
   "prettier": {
     "singleQuote": true,
