--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "natives": "^1.1.3",
+    "node-service-module": "^1.0.2",
     "pdfkit": "^0.9.0",
     "request-promise": "^4.2.2",
     "stopword": "^0.1.10",
