--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Cyber4All/learning-object-service#readme",
   "dependencies": {
     "@cyber4all/clark-taxonomy": "^4.0.2",
+    "@elastic/elasticsearch": "^6.8.0",
     "@sentry/node": "^4.6.6",
     "aws-sdk": "^2.211.0",
     "cookie-parser": "^1.4.3",
