--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-object-service",
-  "version": "2.20.0-5",
+  "version": "2.21.0",
   "description": "Learning Object Microservice.",
   "main": "app.ts",
   "scripts": {
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Cyber4All/learning-object-service#readme",
   "dependencies": {
     "@cyber4all/clark-taxonomy": "^4.0.2",
+    "@elastic/elasticsearch": "^6.8.0",
     "@sentry/node": "^4.6.6",
     "aws-sdk": "^2.211.0",
     "cookie-parser": "^1.4.3",
