--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@ dist.zip
 npm-debug.log
 .idea
 test_environment/globalConfig.json
-.vscode
+.vscode/*
+
+# Include Launch Config for Debugging
+!/.vscode/launch.json
+
