Change test wording, remove user/visitor group

--- a/elasticsearch_testing/Dockerfile
+++ b/elasticsearch_testing/Dockerfile
@@ -1,14 +1,11 @@
 FROM node:8
 
-RUN mkdir -p /opt
-
-WORKDIR /opt
 COPY package.json package-lock.json* jest.config.js jest.setup.js babel.config.js ./
 RUN mkdir elasticsearch-data
 RUN mkdir gateways
 COPY elasticsearch-data ./elasticsearch-data
 COPY gateways ./gateways
-RUN ls
 RUN npm install && npm cache clean --force
 
-RUN npm test
+
+CMD [ "node_modules/.bin/jest", "--verbose", "--coverage", "--detectOpenHandles" ] 
