--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,19 @@ jobs:
               - ./package.json
               - ./deploy.sh
 
+  elasticsearch-smoke-test:
+    steps:
+      - attach_workspace : 
+          at: ~/learning-object-service
+      - run:
+          name: Clone Elasticsearch Smoke Test Repository 
+          command: >-
+          git clone https://${github_username}:${github_password}@github.com/nvisal1/Elasticsearch-Smoke-Test-Environment.git
+      - setup_remote_docker
+      - run: 
+          name: Run Environment
+          command: docker-compose up
+
   deploy-production:
     <<: *defaults
     steps:
@@ -57,7 +70,7 @@ workflows:
   version: 2
   build-and-test:
     jobs:
-      - build
+      - elasticsearch-smoke-test
 
   build-test-and-deploy-production:
     jobs:
