Inherit executor type in elasticsearch testing job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
               - ./deploy.sh
 
   elasticsearch-smoke-test:
+    <<: *defaults
     steps:
       - attach_workspace : 
           at: ~/learning-object-service
