--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,17 +32,17 @@ jobs:
     steps:
       - attach_workspace : 
           at: ~/learning-object-service
+      - setup_remote_docker
       - run:
           name: Clone Elasticsearch Smoke Test Repository 
           command: >-
-            ls && cd .. && git clone https://${github_username}:${github_password}@github.com/nvisal1/Elasticsearch-Smoke-Test-Environment.git
+            cd .. && git clone https://${github_username}:${github_password}@github.com/nvisal1/Elasticsearch-Smoke-Test-Environment.git
       - run: 
           name: Install Docker Compose
           command: |
             curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
             chmod +x ~/docker-compose
             mv ~/docker-compose /usr/local/bin/docker-compose
-      - setup_remote_docker
       - run: 
           name: Run Environment
           command: |
