--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,20 +29,15 @@ jobs:
 
   elasticsearch-smoke-test:
     <<: *defaults
+    docker:
+      - image: circleci/node:8
     steps:
-      - attach_workspace : 
-          at: ~/learning-object-service
+      - checkout
       - setup_remote_docker
       - run:
           name: Clone Elasticsearch Smoke Test Repository 
           command: >-
             cd .. && git clone https://${github_username}:${github_password}@github.com/nvisal1/Elasticsearch-Smoke-Test-Environment.git
-      - run: 
-          name: Install Docker Compose
-          command: |
-            curl -L https://github.com/docker/compose/releases/download/1.19.0/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
-            chmod +x ~/docker-compose
-            mv ~/docker-compose /usr/local/bin/docker-compose
       - run: 
           name: Run Environment
           command: |
