--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           name: Run Environment
           command: |
             cd ../Elasticsearch-Smoke-Test-Environment
-            docker-compose up
+            docker-compose up --abort-on-container-exit --exit-code-from test-runner
 
   deploy-production:
     <<: *defaults
