--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,10 +72,9 @@ jobs:
             
 workflows:
   version: 2
-  build-and-elasticsearch-smoke-test:
+  build-and-test:
     jobs:
       - build
-      - elasticsearch-smoke-test
 
   build-test-and-deploy-production:
     jobs:
@@ -83,9 +82,15 @@ workflows:
           filters:
             branches:
               only: /master/
-      - deploy-production:
+      - elasticsearch-smoke-test:
           requires:
             - build
+          filters:
+            branches:
+              only: /master/
+      - deploy-production:
+          requires:
+            - elasticsearch-smoke-test
           filters:
             branches:
               only: /master/
