--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,15 @@ jobs:
     steps:
       - run:
           name: Notify Sentry
-          command: curl -X POST https://sentry.io/api/organizations/cyber4all/releases/  -H "Authorization: Bearer ${SENTRY_TOKEN}" -d
-          {
-            "projects": [
-              "learning-object-service"
-            ], 
-            "ref": "${CIRCLE_SHA1}", 
-            "version": "${CIRCLE_TAG}"
-          }
+          command: |
+            curl -X POST https://sentry.io/api/organizations/cyber4all/releases -H \"Authorization: Bearer ${SENTRY_RELEASE_TOKEN}\" -d
+            {
+              "projects": [
+                "learning-object-service"
+              ], 
+              "ref": "${CIRCLE_SHA1}", 
+              "version": "${CIRCLE_TAG}"
+            }
 
   elasticsearch-smoke-test:
     <<: *defaults
