--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,8 @@ jobs:
             {
               "projects": [
                 "learning-object-service"
-              ], 
-              "ref": "${CIRCLE_SHA1}", 
+              ],
+              "ref": "${CIRCLE_SHA1}",
               "version": "${CIRCLE_TAG}"
             }
 
@@ -84,12 +84,13 @@ jobs:
             export DOCKER_IMAGE="${DOCKER_USER_ORG}/learning-object-service:${SEMVER}"
             chmod +x ./deploy.sh
             sh ./deploy.sh
-            
+
 workflows:
   version: 2
-  build-and-test:
+  build-test-and-create-sentry-release:
     jobs:
       - build
+      - create-sentry-release
 
   build-test-and-deploy-production:
     jobs:
