--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Notify Sentry
           command: 
-            - curl -X POST https://sentry.io/api/organizations/cyber4all/releases -H "Authorization Bearer $SENTRY_RELEASE_TOKEN" -d projects="learning-object-service" -d ref=$CIRCLE_SHA1 -d version=$CIRCLE_TAG
+            - curl -X POST https://sentry.io/api/organizations/cyber4all/releases/ -H "Authorization=Bearer ${SENTRY_RELEASE_TOKEN}" -d '{projects=["learning-object-service"], ref=$CIRCLE_SHA1, version=$CIRCLE_TAG}'
 
   elasticsearch-smoke-test:
     <<: *defaults
