--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
     steps:
       - run:
           name: Install Sentry CLI
-          command: curl -sL <https://sentry.io/get-cli/>
+          command: curl -sL https://sentry.io/get-cli
       - run:
           name: Create Sentry Release Object
           command: |
