--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@cyber4all/clark-taxonomy": "^4.0.2",
     "@elastic/elasticsearch": "^6.8.0",
     "@sentry/node": "^4.6.6",
+    "@types/archiver": "^3.0.0",
+    "archiver": "^3.0.0",
     "aws-sdk": "^2.211.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "get-uri": "^2.0.3",
     "md5": "^2.2.1",
     "mongodb": "^3.1.6",
     "morgan": "^1.9.0",
