--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-object-service",
-  "version": "2.28.0",
+  "version": "2.27.0-2",
   "description": "Learning Object Microservice.",
   "main": "app.ts",
   "scripts": {
