add circle config to run elastic search smoke tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,9 @@ workflows:
   build-test:
     jobs:
       - build
+      - elasticsearch-smoke-test: 
+          requires: 
+            - build
 
   build-test-create-sentry-release-and-deploy-production:
     jobs:
