--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,10 @@ workflows:
   version: 2
   build-test:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: /master/
 
   build-test-create-sentry-release-and-deploy-production:
     jobs:
