fix broken unit tests, enable es testing in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,9 @@ workflows:
           filters:
             branches:
               ignore: /master/
+      - elasticsearch-smoke-test:
+          requires:
+            - build
 
   build-test-create-sentry-release-and-deploy-production:
     jobs:
