--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-object-service",
-  "version": "3.9.3-5",
+  "version": "3.11.0",
   "description": "Learning Object Microservice.",
   "main": "app.ts",
   "scripts": {
