Create bundle if file does not exist

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "node -r ts-node/register ./src/app.ts",
     "serve:debug": "node --inspect=5858 -r ts-node/register ./src/app.ts",
     "build": "node_modules/.bin/gulp tsc",
-    "test": "node_modules/.bin/jest -—detectOpenHandles",
+    "test": "node_modules/.bin/jest",
     "gulp-tsc": "node_modules/.bin/gulp start",
     "pack": "npm run build && cp ./package.json ./dist && cp -r ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
     "zip": "cp ./package.json ./dist && cp -r ./.ebextensions ./dist && cd ./dist && zip -r ../dist.zip  ./* & cd ..",
