--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@elastic/elasticsearch": "^6.8.0",
     "@sentry/node": "^4.6.6",
     "@types/archiver": "^3.0.0",
+    "@types/uuid": "^3.4.5",
     "archiver": "^3.0.0",
     "aws-sdk": "^2.211.0",
     "cookie-parser": "^1.4.3",
@@ -47,9 +48,10 @@
     "node-service-module": "^1.1.0",
     "pdfkit": "^0.9.0",
     "request-promise": "^4.2.2",
+    "snyk": "^1.189.0",
     "stopword": "^0.1.10",
     "striptags": "^3.1.1",
-    "snyk": "^1.189.0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^2.0.0",
