--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@cyber4all/clark-taxonomy": "^4.0.2",
     "@elastic/elasticsearch": "^6.8.0",
     "@sentry/node": "^4.6.6",
+    "@types/amqplib": "^0.5.13",
     "@types/archiver": "^3.0.0",
     "@types/uuid": "^3.4.5",
+    "amqplib": "^0.5.5",
     "archiver": "^3.0.0",
-    "aws-sdk": "^2.211.0",
+    "aws-sdk": "^2.609.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -47,6 +49,7 @@
     "natives": "^1.1.3",
     "node-service-module": "^1.1.0",
     "pdfkit": "^0.9.0",
+    "rabbit-queue": "^4.6.0",
     "request-promise": "^4.2.2",
     "snyk": "^1.189.0",
     "stopword": "^0.1.10",
