Move node to build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@ defaults: &defaults
   working_directory: ~/learning-object-service
   docker:
     - image: cyber4all/circleci-aws:docker-git
-    - image: circleci/node:10
 version: 2
 jobs:
   build:
     <<: *defaults
+    docker:
+      - image: circleci/node:8
     steps:
       - checkout
       - setup_remote_docker
