--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,21 @@ defaults: &defaults
   docker:
     - image: cyber4all/circleci-aws:docker-git
 version: 2
+orbs:
+  newman: postman/newman@latest
 jobs:
   build:
     <<: *defaults
-    docker:
-      - image: circleci/node:8
     steps:
       - checkout
       - setup_remote_docker
-      - run:
-          name: Install Newman and Run Functional Tests
-          command: |
-            npm i
-            sudo npm i -g newman
-            npm start
-            newman run Learning\ Object\ Service.postman_collection.json
+      # - run:
+      #     name: Install Newman and Run Functional Tests
+      #     command: |
+      #       npm i
+      #       sudo npm i -g newman
+      #       npm start
+      #       newman run Learning\ Object\ Service.postman_collection.json
       - run:
           name: Build Image & Unit Test
           command: | 
@@ -35,6 +35,13 @@ jobs:
           paths: 
               - ./package.json
               - ./deploy.sh
+  
+  newman-collection-run:
+    executor: newman/postman-newman-docker
+    steps:
+      - checkout
+      - newman/newman-run:
+          collection: ./Learning\ Object\ Service.postman_collection.json
     
   create-sentry-release:
     <<: *defaults
