Here we go again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ defaults: &defaults
   working_directory: ~/learning-object-service
   docker:
     - image: cyber4all/circleci-aws:docker-git
-version: 2
+version: 2.1
 orbs:
-  newman: postman/newman@latest
+  newman: postman/newman@0.0.2
 jobs:
   build:
     <<: *defaults
